# MyuEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: windows-installer.yml
Projects/test/: project.mye
Projects/test/Assets/Shaders/: default.frag  default.vert
Projects/test/Scenes/: MainScene.scene
Projects/testw/: project.mye
Projects/testw/Config/: game.cfg
Projects/testw/Scripts/: main.cpp
cmake/: CPackOptions.cmake
extras/Samples/: README.txt
extras/Tools/: README.txt
lang/: en_US.lang  zh_TW.lang
src/: main.cpp
src/editor/: GameEditor.h  VoxelEditor.h
src/engine/: Camera2D5.h  Core.h  ECS.h  EventBus.h  GltfLoader.h  Math3D.h  Resources.h
src/game/: BoardGame.h  CardGame.h  GameSystems.h
src/tools/: BlockbenchImport.h
src/ui_designer/: UIDesigner.h  UIElement.h  UIExporters.h  UIHtmlCss.h
